--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,15 @@
 
 a{
   cursor: pointer;
+  color: white;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+  text-decoration: none; 
+  font-size: 24px;                                             
+}
+
+a:hover{
+  color: tomato;
 }
 
 
